--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -5,9 +5,14 @@
     <title>{% block title %}Welcome!{% endblock %}</title>
     {% block stylesheets %}{% endblock %}
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+    <link rel="stylesheet" href="{{ asset('bundles/app/css/bootstrap.min.css') }}" />
+
 </head>
 <body>
 {% block body %}{% endblock %}
 {% block javascripts %}{% endblock %}
+
+    <script src="{{ asset('bundles/app/js/bootstrap.min.js') }}"></script>
+    <script src="{{ asset('bundles/app/js/jquery.min.js') }}"></script>
 </body>
 </html>
