--- a/src/AppBundle/Resources/views/Game/createGame.html.twig
+++ b/src/AppBundle/Resources/views/Game/createGame.html.twig
@@ -2,8 +2,13 @@
 
 {% block body %}
 
-    {{ form_start(form) }}
-    {{ form_widget(form) }}
-    {{ form_end(form) }}
+    <div class="container">
+        <div class="row">
 
+        {{ form_start(form) }}
+        {{ form_widget(form) }}
+        {{ form_end(form) }}
+
+        </div>
+    </div>
 {% endblock %}
