--- a/src/AppBundle/Resources/views/Team/createTeam.html.twig
+++ b/src/AppBundle/Resources/views/Team/createTeam.html.twig
@@ -1,16 +1,10 @@
-{% extends 'AppBundle::base.html.twig' %}
+{% extends '@App/adminBase.html.twig' %}
 
-{% block body %}
-
-
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                {{ form_start(form) }}
-                {{ form_widget(form) }}
-                {{ form_end(form) }}
-            </div>
-        </div>
+{% block rightColumn %}
+    <div class="well">
+        <h1>Team</h1>
+        {{ form_start(form) }}
+        {{ form_widget(form) }}
+        {{ form_end(form) }}
     </div>
-
 {% endblock %}
