--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -6,6 +6,7 @@
     {% block stylesheets %}{% endblock %}
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     <link rel="stylesheet" href="{{ asset('bundles/app/css/bootstrap.min.css') }}" />
+    <link rel="stylesheet" href="{{ asset('bundles/app/css/jquery.datetimepicker.css') }}" />
 
 </head>
 <body>
@@ -14,5 +15,6 @@
 
     <script src="{{ asset('bundles/app/js/bootstrap.min.js') }}"></script>
     <script src="{{ asset('bundles/app/js/jquery.min.js') }}"></script>
+    <script src="{{ asset('bundles/app/js/jquery.datetimepicker.js') }}"></script>
 </body>
 </html>
