bit styling to admin table

--- a/src/AppBundle/Resources/views/layoutBase.html.twig
+++ b/src/AppBundle/Resources/views/layoutBase.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <div class="row">
         <div class="col-lg-12">
-    <h1>top bar</h1>
+    <a href="{{ path('admin-index') }}"><h1>eBet</h1></a>
 </div>
     </div>
     {% block body_inner %}
