--- a/src/AppBundle/Resources/views/Admin/showAdminIndex.html.twig
+++ b/src/AppBundle/Resources/views/Admin/showAdminIndex.html.twig
@@ -2,38 +2,39 @@
 
 
 {% block rightColumn %}
+    <div class="well">
+        <table class="table">
+            <tc><h2>All bets</h2></tc>
+                <tr>
+                    <th>Home odds</th>
+                    <th>Away odds</th>
+                    <th>Home team</th>
+                    <th>Away team</th>
+                    <th>game</th>
+                    <th>result</th>
+                    <th>status</th>
+                </tr>
 
-    <table class="table">
-        <tc><h2>All bets</h2></tc>
-            <tr>
-                <th>Home odds</th>
-                <th>Away odds</th>
-                <th>Home team</th>
-                <th>Away team</th>
-                <th>game</th>
-                <th>result</th>
-                <th>status</th>
-            </tr>
+            {% for b in bets %}
+                <tr>
+                    <td>{{ b.homeOdds}}</td>
+                    <td>{{ b.awayOdds}}</td>
+                    <td>{{ b.homeTeam.name}}</td>
+                    <td>{{ b.awayTeam.name}}</td>
+                    <td>{{ b.Game.name}}</td>
+                    <td>{{ b.result}}</td>
+                    {% if b.status == constant('AppBundle\\Entity\\Bet::STATUS_ACTIVE') %}
+                        <td>active</td>
+                    {% elseif b.status == constant('AppBundle\\Entity\\Bet::STATUS_PAUSED') %}
+                        <td>paused</td>
+                    {% elseif b.status == constant('AppBundle\\Entity\\Bet::STATUS_CLOSED')%}
+                        <td>closed</td>
+                    {% endif %}
+                </tr>
+            {% endfor %}
 
-        {% for b in bets %}
-            <tr>
-                <td>{{ b.homeOdds}}</td>
-                <td>{{ b.awayOdds}}</td>
-                <td>{{ b.homeTeam.name}}</td>
-                <td>{{ b.awayTeam.name}}</td>
-                <td>{{ b.Game.name}}</td>
-                <td>{{ b.result}}</td>
-                {% if b.status == constant('AppBundle\\Entity\\Bet::STATUS_ACTIVE') %}
-                    <td>active</td>
-                {% elseif b.status == constant('AppBundle\\Entity\\Bet::STATUS_PAUSED') %}
-                    <td>paused</td>
-                {% elseif b.status == constant('AppBundle\\Entity\\Bet::STATUS_CLOSED')%}
-                    <td>closed</td>
-                {% endif %}
-            </tr>
-        {% endfor %}
-
-    </table>
+        </table>
+    </div>
 
 
 {% endblock %}
