--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     <link rel="stylesheet" href="{{ asset('bundles/app/css/bootstrap.min.css') }}" />
     <link rel="stylesheet" href="{{ asset('bundles/app/css/jquery.datetimepicker.css') }}" />
+    <link rel="stylesheet" href="{{ asset('bundles/app/css/style.css') }}" />
 
 </head>
 <body>
