added entity repository

--- a/src/AppBundle/Resources/views/adminBase.html.twig
+++ b/src/AppBundle/Resources/views/adminBase.html.twig
@@ -4,8 +4,8 @@
     <div class="row">
         <div class="col-lg-3 list-group">
             <a class="list-group-item" href="{{ path('create-bet') }}">Bet</a>
-            <a class="list-group-item" href="{{ path('create-team') }}">Game</a>
-            <a class="list-group-item" href="{{ path('create-game') }}">Team</a>
+            <a class="list-group-item" href="{{ path('create-game') }}">Game</a>
+            <a class="list-group-item" href="{{ path('create-team') }}">Team</a>
         </div>
         <div class="col-lg-9" id="form-wrapper">
             {% block rightColumn %}
