Moved Admin layout templates to the Admin folder

--- a/src/AppBundle/Resources/views/Admin/Bet/createBet.html.twig
+++ b/src/AppBundle/Resources/views/Admin/Bet/createBet.html.twig
@@ -1,4 +1,4 @@
-{% extends '@App/adminBase.html.twig' %}
+{% extends '@App/Admin/adminBase.html.twig' %}
 
 {% block rightColumn %}
         <div class="well">
