--- a/src/AppBundle/Resources/views/Admin/adminBase.html.twig
+++ b/src/AppBundle/Resources/views/Admin/adminBase.html.twig
@@ -1,4 +1,4 @@
-{% extends '@App/layoutBase.html.twig' %}
+{% extends '@App/Admin/layoutBase.html.twig' %}
 
 {% block content %}
     <div class="row">
