--- a/src/AppBundle/Resources/views/Admin/Team/createTeam.html.twig
+++ b/src/AppBundle/Resources/views/Admin/Team/createTeam.html.twig
@@ -1,4 +1,5 @@
-{% extends '@App/adminBase.html.twig' %}
+{% extends '@App/Admin/adminBase.html.twig' %}
+
 
 {% block rightColumn %}
     <div class="well">
