--- a/src/AppBundle/Resources/views/Index/showMatches.html.twig
+++ b/src/AppBundle/Resources/views/Index/showMatches.html.twig
@@ -2,6 +2,7 @@
 
 
 {% block body %}
+    <div class="container">
     <div class="well">
         <table class="table table-hover">
             <tc><h2>All bets</h2></tc>
@@ -44,5 +45,5 @@
 
         </table>
     </div>
-
+    </div>
 {% endblock %}
