Added balance to User entity

--- a/src/AppBundle/Resources/views/layoutBase.html.twig
+++ b/src/AppBundle/Resources/views/layoutBase.html.twig
@@ -5,6 +5,7 @@
     <div class="row">
         <div class="col-lg-12">
             <a href="{{ path('index') }}"><h1>eBet</h1></a>
+            <a href="{{ path('fos_user_security_login') }}">Login</a>
         </div>
     </div>
 
