--- a/src/AppBundle/Resources/views/Index/showMatches.html.twig
+++ b/src/AppBundle/Resources/views/Index/showMatches.html.twig
@@ -1,7 +1,7 @@
 {% extends '@App/layoutBase.html.twig' %}
 
 
-{% block content %}
+{% block index %}
 
     <div class="well">
         <table class="table table-hover" id="index">
