--- a/src/AppBundle/Resources/views/layoutBase.html.twig
+++ b/src/AppBundle/Resources/views/layoutBase.html.twig
@@ -1,21 +1,27 @@
 {% extends '@App/base.html.twig' %}
 
 {% block body %}
-
-    <div class="row">
-        <div class="col-lg-12">
-            <a href="{{ path('index') }}"><h1>eBet</h1></a>
-            <a href="{{ path('fos_user_security_login') }}">Login</a>
+            {% block top %}
+                {% include '@App/top.html.twig' %}
+            {% endblock %}
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3">
+                {% block left %}{% endblock %}
+            </div>
+            <div class="col-lg-6">
+                {% block index %}{% endblock %}
+            </div>
+            <div class="col-lg-3">
+                {% block right %}{% endblock %}
+            </div>
         </div>
     </div>
-    
-
-    {% block body_inner %}
-        <div class="container">
-            {% block content %}{% endblock %}
+    <div class="row">
+        <div class="col-lg-12">
+            {% block footer %}
+                {% include '@App/footer.html.twig' %}
+            {% endblock %}
         </div>
-    {% endblock %}
-
-
-
+    </div>
 {% endblock %}
