Added base layout to register template

--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -1,6 +1,6 @@
-{% extends 'AppBundle::base.html.twig' %}
+{% extends '@App/layoutBase.html.twig' %}
 
 
-{% block body %}
+{% block index %}
     {{ block('fos_user_content') }}
 {% endblock %}
