--- a/src/AppBundle/Resources/views/test.html.twig
+++ b/src/AppBundle/Resources/views/test.html.twig
@@ -2,8 +2,28 @@
 
 
 {% block index %}
-    <p>Balance: {{ balance }}</p>
-    {{ form_start(form) }}
-    {{ form_widget(form) }}
-    {{ form_end(form) }}
+
+    <p>Balance: {{ user.balance }}</p>
+    <a href="#"><button class="btn btn-primary" type="button" data-toggle="modal" data-target="#myModal">Add funds</button></a>
+    <div class="modal fade" id="myModal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3 class="modal-title">Add funds to your account</h3>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-md-6">
+                            {{ form_start(form) }}
+                            {{ form_widget(form) }}
+                            {{ form_end(form) }}
+                        </div>
+                        <div class="col-md-6">
+                            <p>Your current balance is: {{ user.balance }}</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
