--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -3,17 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>{% block title %}eBet{% endblock %}</title>
-<<<<<<< HEAD
-    {% block stylesheets %}{% endblock %}
-    <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-    <link rel="stylesheet" href="{{ asset('bundles/app/css/bootstrap.min.css') }}" />
-    <link rel="stylesheet" href="{{ asset('bundles/app/css/jquery.datetimepicker.css') }}" />
-    <link rel="stylesheet" href="{{ asset('bundles/app/css/style.css') }}" />
     <script src="{{ asset('bundles/app/js/jquery.min.js') }}"></script>
-
-
-
-=======
     {% block stylesheets %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
         <link rel="stylesheet" href="{{ asset('bundles/app/css/bootstrap.min.css') }}" />
@@ -21,14 +11,15 @@
         <link rel="stylesheet" href="{{ asset('bundles/app/css/style.css') }}" />
     {% endblock %}
     {% block header %}{% endblock %}
->>>>>>> fix layout
 </head>
 <body>
 {% block body %}{% endblock %}
 {% block footer %}{% endblock %}
-{% block javascripts %}{% endblock %}
-
+{% block javascripts %}
     <script src="{{ asset('bundles/app/js/bootstrap.min.js') }}"></script>
     <script src="{{ asset('bundles/app/js/jquery.datetimepicker.js') }}"></script>
+{% endblock %}
+
+
 </body>
 </html>
