--- a/src/AppBundle/Resources/views/top.html.twig
+++ b/src/AppBundle/Resources/views/top.html.twig
@@ -1,6 +1,6 @@
-{% block header %}
+<div class="container">
     <a href="{{ path('index') }}"><h1>eBet</h1></a>
     <a href="{{ path('fos_user_security_login') }}">Login</a>
     <a href="{{ path('fos_user_profile_show') }}">Profile</a>
-{% endblock %}
+</div>
 
