--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -14,12 +14,13 @@
 </head>
 <body>
 {% block body %}{% endblock %}
-{% block footer %}{% endblock %}
+
 {% block javascripts %}
     <script src="{{ asset('bundles/app/js/bootstrap.min.js') }}"></script>
     <script src="{{ asset('bundles/app/js/jquery.datetimepicker.js') }}"></script>
 {% endblock %}
-
-
 </body>
+<footer>
+    {% block footer %}{% endblock %}
+</footer>
 </html>
