--- a/src/AppBundle/Resources/views/Balance/index.html.twig
+++ b/src/AppBundle/Resources/views/Balance/index.html.twig
@@ -11,12 +11,25 @@
                 </div>
                 <div class="modal-body">
                     <div class="row">
-                        <div class="col-md-6">
-                            {{ form_start(addForm) }}
-                            {{ form_widget(addForm) }}
-                            {{ form_end(addForm) }}
+                        <div class="col-md-12">
+                            <form action="{{ path('deposit-balance') }}" method="post" class="form-horizontal">
+                                <div class="form-group">
+                                    <div class="col-sm-6">
+                                        <label class="control-label" for="inputDailyBudget">Balance</label>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <input name="deposit-balance" type="text" class="form-control col-sm-10" placeholder="Balance">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <div class="col-sm-12">
+                                        <button type="submit" class="btn-success pull-right btn">Submit</button>
+                                    </div>
+                                </div>
+
+                            </form>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-12">
                             <p>Your current balance is: {{ user.balance }}</p>
                         </div>
                     </div>
@@ -30,16 +43,28 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h3 class="modal-title">Add funds to your account</h3>
+                    <h3 class="modal-title">Withdraw funds to your account</h3>
                 </div>
                 <div class="modal-body">
                     <div class="row">
-                        <div class="col-md-6">
-                            {{ form_start(withdrawForm) }}
-                            {{ form_widget(withdrawForm) }}
-                            {{ form_end(withdrawForm) }}
+                        <div class="col-md-12">
+                            <form action="{{ path('withdraw-balance') }}" method="post" class="form-horizontal">
+                                <div class="form-group">
+                                    <div class="col-sm-6">
+                                        <label class="control-label" for="inputDailyBudget">Balance</label>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <input name="withdraw-balance" type="text" class="form-control col-sm-10" placeholder="Balance">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <div class="col-sm-12">
+                                        <button type="submit" class="btn-success pull-right btn">Submit</button>
+                                    </div>
+                                </div>
+                            </form>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-12">
                             <p>Your current balance is: {{ user.balance }}</p>
                         </div>
                     </div>
