--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -19,6 +19,7 @@
     <script src="{{ asset('bundles/app/js/bootstrap.min.js') }}"></script>
     <script src="{{ asset('bundles/app/js/jquery.datetimepicker.js') }}"></script>
 {% endblock %}
+{% block js %}{% endblock %}
 </body>
 <footer>
     {% block footer %}{% endblock %}
