--- a/src/AppBundle/Resources/views/layoutBase.html.twig
+++ b/src/AppBundle/Resources/views/layoutBase.html.twig
@@ -12,7 +12,9 @@
                 {% block index %}{% endblock %}
             </div>
             <div class="col-lg-3">
-                {% block right %}{% endblock %}
+                {% block right %}
+                    {% include '@App/right.html.twig' %}
+                {% endblock %}
             </div>
         </div>
     </div>
