--- a/src/AppBundle/Resources/views/Balance/index.html.twig
+++ b/src/AppBundle/Resources/views/Balance/index.html.twig
@@ -15,7 +15,7 @@
                             <form action="{{ path('deposit-balance') }}" method="post" class="form-horizontal">
                                 <div class="form-group">
                                     <div class="col-sm-6">
-                                        <label class="control-label" for="inputDailyBudget">Balance</label>
+                                        <label class="control-label">Balance</label>
                                     </div>
                                     <div class="col-sm-6">
                                         <input name="deposit-balance" type="text" class="form-control col-sm-10" placeholder="Balance">
@@ -50,7 +50,7 @@
                             <form action="{{ path('withdraw-balance') }}" method="post" class="form-horizontal">
                                 <div class="form-group">
                                     <div class="col-sm-6">
-                                        <label class="control-label" for="inputDailyBudget">Balance</label>
+                                        <label class="control-label">Balance</label>
                                     </div>
                                     <div class="col-sm-6">
                                         <input name="withdraw-balance" type="text" class="form-control col-sm-10" placeholder="Balance">
