--- a/src/AppBundle/Resources/views/Index/showMatches.html.twig
+++ b/src/AppBundle/Resources/views/Index/showMatches.html.twig
@@ -29,11 +29,11 @@
                                     <div class="modal-body">
                                         <div class="row">
                                             <div class="col-md-12">
-                                                <form method="post" class="form-horizontal">
+                                                <div class="col-sm-12">
+                                                    <label class="control-label">{{ b.homeTeam.name }} - {{ b.awayTeam.name}}</label>
+                                                </div>
+                                                <form action="{{ path('create-coupon', {'betId': b.Id}) }}" method="post" class="form-horizontal">
                                                     <div class="form-group">
-                                                        <div class="col-sm-12">
-                                                            <label class="control-label">{{ b.homeTeam.name }} - {{ b.awayTeam.name}}</label>
-                                                        </div>
                                                         <div class="col-sm-12">
                                                             <label class="control-label">Odds {{ b.homeOdds }}</label>
                                                         </div>
@@ -70,11 +70,13 @@
                                     <div class="modal-body">
                                         <div class="row">
                                             <div class="col-md-12">
-                                                <form method="post" class="form-horizontal">
+                                                <div class="col-sm-12">
+                                                    <label class="control-label">{{ b.homeTeam.name }} - {{ b.awayTeam.name}}</label>
+                                                </div>
+
+                                                <form action="{{ path('create-coupon', {'betId': b.Id}) }}" method="post" class="form-horizontal">
                                                     <div class="form-group">
-                                                        <div class="col-sm-12">
-                                                            <label class="control-label">{{ b.homeTeam.name }} - {{ b.awayTeam.name}}</label>
-                                                        </div>
+
                                                         <div class="col-sm-12">
                                                             <label class="control-label">Odds {{ b.awayOdds }}</label>
                                                         </div>
