--- a/src/AppBundle/Resources/views/left.html.twig
+++ b/src/AppBundle/Resources/views/left.html.twig
@@ -1,1 +1,6 @@
-<p>Vælg spil</p>
+<h1 id="sidebarOverskrift">Pick a game:</h1>
+<a href="{{ path('fos_user_security_login') }}">
+    <img class="sidebarbillede" src="{{ asset('bundles/app/img/csgologo.png')}}">
+    <img class="sidebarbillede" src="{{ asset('bundles/app/img/dotalogo.png')}}">
+</a>
+
