working on updating results

--- a/src/AppBundle/Resources/views/Admin/adminBase.html.twig
+++ b/src/AppBundle/Resources/views/Admin/adminBase.html.twig
@@ -7,6 +7,7 @@
             <a class="list-group-item" href="{{ path('create-bet') }}">Bet</a>
             <a class="list-group-item" href="{{ path('create-game') }}">Game</a>
             <a class="list-group-item" href="{{ path('create-team') }}">Team</a>
+            <a class="list-group-item" href="{{ path('show-result') }}">Result</a>
         </div>
 
         <div class="col-lg-9" id="form-wrapper">
