added more fields to coupon entity

--- a/src/AppBundle/Resources/views/top.html.twig
+++ b/src/AppBundle/Resources/views/top.html.twig
@@ -3,7 +3,7 @@
         <div id="login">
 
                 <a id="topbar" href="{{ path('fos_user_security_login') }}">Login</a>
-                <a id="topbar" href="¤">Create user</a>
+                <a id="topbar" href="ï¿½">Create user</a>
                 <button id="button1" class="btn btn-default dropdown-toggle" type="button" data-toggle=""dropdown>
                     Profile <span class="caret"></span>
                 </button>
@@ -11,18 +11,7 @@
                 <span class="caret"></span></a> -->
         </div>
     </div>
-    <div class="billedebar">
-        <img class="logo" src="{{ asset('bundles/app/img/ebet.jpg') }}"/>
-    </div>
-    <div class="navigationsbar" id="navigationsbar">
-        <div id="navibar">
-            <ul>
-        <li><a href="{{ path('index') }}" id="white">Home</a></li>
-        <li></li>
-        <li><a href="¤" id="white">Test1</a></li>
-        <li><a href="¤" id="white">Test2</a></li>
-        <li><a href="¤" id="white">DetteERTest3</a></li>
-            </ul>
-        </div>
+    <div class="logo">
+        <img class="logo" src="{{ asset('bundles/app/img/ebet-logo.png') }}"/>
     </div>
 </div>
