--- a/src/AppBundle/Resources/views/footer.html.twig
+++ b/src/AppBundle/Resources/views/footer.html.twig
@@ -1,1 +1,43 @@
-<h2>Footer</h2>
+<div class="footer" id="Footerdiv">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-3"></div>
+            <div class="col-xs-2" id="Footerleft">
+                <h3>Help</h3>
+            </div>
+            <div class="col-xs-2" id="Footercenter">
+                <h3>The games</h3>
+            </div>
+            <div class="col-xs-2" id="Footerright">
+                <h3>About us</h3>
+            </div>
+            <div class="col-xs-3"></div>
+        </div>
+        <div class="row">
+            <div class="col-xs-3"></div>
+            <div class="col-xs-2" id="Footerleft">
+                <a>Can't place a bet?</a>
+            </div>
+            <div class="col-xs-2" id="Footercenter">
+                <a href="http://dota2.gamepedia.com/Dota_2"><p>Dota 2</p></a>
+            </div>
+            <div class="col-xs-2" id="Footerright">
+                <a>Terms and conditions</a>
+            </div>
+            <div class="col-xs-3"></div>
+        </div>
+        <div class="row">
+            <div class="col-xs-3"></div>
+            <div class="col-xs-2" id="Footerleft">
+                <a>Can't redraw money?</a>
+            </div>
+            <div class="col-xs-2" id="Footercenter">
+                <a href="http://counterstrike.wikia.com/wiki/Counter-Strike:_Global_Offensive"><p>CS GO</p></a>
+            </div>
+            <div class="col-xs-2" id="Footerright">
+                <a>Contact us</a>
+            </div>
+            <div class="col-xs-3"></div>
+        </div>
+    </div>
+</div>
