--- a/src/AppBundle/Resources/views/top.html.twig
+++ b/src/AppBundle/Resources/views/top.html.twig
@@ -5,48 +5,23 @@
             <div class="col-xs-5"></div>
             <div class="col-xs-2" id="LCU">
                 <a id="topbar" href="{{ path('fos_user_security_login') }}">Login</a>
-<<<<<<< HEAD
-                <a id="topbar" href="ï¿½">Create user</a>
-                <button id="button1" class="btn btn-default dropdown-toggle" type="button" data-toggle=""dropdown>
-                    Profile <span class="caret"></span>
-=======
             </div>
             <div class="col-xs-3" id="LCU1">
-                <a id="topbar" href="¤">Create user</a>
+                <a id="topbar" href="ï¿½">Create user</a>
             </div>
             <div class="col-xs-2" id="Profile">
                 <button id="button1" class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="true">Profile <span class="caret"></span>
->>>>>>> Design
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                    <li><a href="¤">Profil</a></li>
-                    <li><a href="¤">Your matches</a></li>
+                    <li><a href="ï¿½">Profil</a></li>
+                    <li><a href="ï¿½">Your matches</a></li>
                 </ul>
             </div>
             <div class="col-xs-2"></div>
         </div>
     </div>
-<<<<<<< HEAD
     <div class="logo">
         <img class="logo" src="{{ asset('bundles/app/img/ebet-logo.png') }}"/>
-=======
-    <div id="billedebar" class="row">
-        <div class="col-lg-12">
-            <img class="logo" src="{{ asset('bundles/app/img/ebet.jpg') }}"/>
-        </div>
-    </div>
-    <div id="navigationbar" class="row">
-        <div class="col-xs-2"></div>
-        <div id="navibar" class="col-xs-10">
-            <ul>
-                <li class="navibar1"><a href="{{ path('index') }}" id="white">Home</a></li>
-                <li class="navibar1"></li>
-                <li class="navibar1"><a href="¤" id="white">Test1</a></li>
-                <li class="navibar1"><a href="¤" id="white">Test2</a></li>
-                <li class="navibar1"><a href="¤" id="white">DetteERTest3</a></li>
-            </ul>
-        </div>
->>>>>>> Design
     </div>
 </div>
