--- a/src/AppBundle/Resources/views/footer.html.twig
+++ b/src/AppBundle/Resources/views/footer.html.twig
@@ -1,3 +1,4 @@
+<footer>
 <div class="footer" id="Footerdiv">
     <div class="container">
         <div class="row">
@@ -41,3 +42,4 @@
         </div>
     </div>
 </div>
+</footer>
