--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -111,8 +111,7 @@ ul {
 /*Footer*/
 .footer {
     background: rgba(0, 0, 0, 0.85);
-    position: absolute;
     width: 100%;
     bottom: 0;
-    left: 0;
+    height: 200px;
 }
