--- a/src/AppBundle/Resources/views/Admin/Bet/updateResult.html.twig
+++ b/src/AppBundle/Resources/views/Admin/Bet/updateResult.html.twig
@@ -1,7 +1,26 @@
 {% extends '@App/Admin/adminBase.html.twig' %}
 
 {% block rightColumn %}
-    {{ form_start(form) }}
-    {{ form_widget(form) }}
-    {{ form_end(form) }}
+    <div class="well">
+        {% for t in bets %}
+        <form action="{{ path('result', {'bet': t.id}) }}" method="post" class="form-horizontal">
+            <div class="form-group">
+                <div class="col-sm-6">
+                    <label class="control-label">Result</label>
+                </div>
+                <select name="teamResult" class="form-control">
+                    {% for b in bets %}
+                        <option value="{{ b.homeTeam.name }}">{{ b.homeTeam.name }}</option>
+                        <option value="{{ b.awayTeam.name }}">{{ b.awayTeam.name }}</option>
+                    {% endfor %}
+                </select>
+            </div>
+            <div class="form-group">
+                <div class="col-sm-12">
+                    <button type="submit" class="btn-success pull-right btn">Submit</button>
+                </div>
+            </div>
+        </form>
+        {% endfor %}
+    </div>
 {% endblock %}
