--- a/src/AppBundle/Resources/views/left.html.twig
+++ b/src/AppBundle/Resources/views/left.html.twig
@@ -1,15 +1,14 @@
-<h1 id="sidebarOverskrift">Pick a game:</h1>
 <div id="sidebar" class="row">
-    <div class="col-lg-12">
+    <div class="col-lg-12 col-md-12">
         <a href="{{ path('fos_user_security_login') }}">
-            <img class="sidebarbillede" src="{{ asset('bundles/app/img/csgologo.png')}}">
+            <img class="ebet-nav" src="{{ asset('bundles/app/img/csgologo.png')}}">
         </a>
     </div>
 </div>
 <div id="sidebar1" class="row">
-    <div class="col-lg-12">
+    <div class="col-lg-12 col-md-12">
         <a href="{{ path('fos_user_security_login') }}">
-            <img class="sidebarbillede" src="{{ asset('bundles/app/img/dotalogo.png')}}">
+            <img class="ebet-nav" src="{{ asset('bundles/app/img/dotalogo.png')}}">
         </a>
     </div>
 </div>
