--- a/src/AppBundle/Resources/views/Index/showMatches.html.twig
+++ b/src/AppBundle/Resources/views/Index/showMatches.html.twig
@@ -41,15 +41,15 @@
                                                             <input name="bet-amount" type="text" class="form-control col-sm-10" placeholder="Your bet">
                                                         </div>
                                                         <div class="col-sm-6 hidden">
-                                                            <input name="bet-odds" type="text" class="form-control col-sm-10" value="{{ b.homeOdds }}">
+                                                            <input name="bet-homeodds" type="text" class="form-control col-sm-10" value="{{ b.homeOdds }}">
                                                         </div>
                                                         <div class="col-sm-6 hidden">
-                                                            <input name="bet-team" type="text" class="form-control col-sm-10" value="{{ b.homeTeam.name }}">
+                                                            <input name="bet-hometeam" type="text" class="form-control col-sm-10" value="{{ b.homeTeam.name }}">
                                                         </div>
                                                     </div>
                                                     <div class="form-group">
                                                         <div class="col-sm-12">
-                                                            <button type="submit" class="btn-success pull-right btn">Place bet</button>
+                                                            <button name="homeButton" type="submit" class="btn-success pull-right btn">Place bet</button>
                                                         </div>
                                                     </div>
                                                 </form>
@@ -86,15 +86,15 @@
                                                             <input name="bet-amount" type="text" class="form-control col-sm-10" placeholder="Your bet">
                                                         </div>
                                                         <div class="col-sm-6 hidden">
-                                                            <input name="bet-odds" type="text" class="form-control col-sm-10" value="{{ b.awayOdds }}">
+                                                            <input name="bet-awayodds" type="text" class="form-control col-sm-10" value="{{ b.awayOdds }}">
                                                         </div>
                                                         <div class="col-sm-6 hidden">
-                                                            <input name="bet-team" type="text" class="form-control col-sm-10" value="{{ b.awayTeam.name }}">
+                                                            <input name="bet-awayteam" type="text" class="form-control col-sm-10" value="{{ b.awayTeam.name }}">
                                                         </div>
                                                     </div>
                                                     <div class="form-group">
                                                         <div class="col-sm-12">
-                                                            <button type="submit" class="btn-success pull-right btn">Place bet</button>
+                                                            <button name="awayButton" type="submit" class="btn-success pull-right btn">Place bet</button>
                                                         </div>
                                                     </div>
                                                 </form>
