--- a/src/AppBundle/Resources/views/left.html.twig
+++ b/src/AppBundle/Resources/views/left.html.twig
@@ -1,14 +1,16 @@
-<div id="sidebar" class="row">
-    <div class="col-lg-12 col-md-12">
-        <a href="{{ path('fos_user_security_login') }}">
-            <img class="ebet-nav" src="{{ asset('bundles/app/img/csgologo.png')}}">
-        </a>
+<div class="left">
+    <div id="sidebar" class="row">
+        <div class="col-lg-12 col-md-12">
+            <a href="{{ path('fos_user_security_login') }}">
+                <img class="ebet-nav" src="{{ asset('bundles/app/img/csgologo.png')}}">
+            </a>
+        </div>
     </div>
-</div>
-<div id="sidebar1" class="row">
-    <div class="col-lg-12 col-md-12">
-        <a href="{{ path('fos_user_security_login') }}">
-            <img class="ebet-nav" src="{{ asset('bundles/app/img/dotalogo.png')}}">
-        </a>
+    <div id="sidebar1" class="row">
+        <div class="col-lg-12 col-md-12">
+            <a href="{{ path('fos_user_security_login') }}">
+                <img class="ebet-nav" src="{{ asset('bundles/app/img/dotalogo.png')}}">
+            </a>
+        </div>
     </div>
 </div>
